--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -86,12 +86,14 @@
         <main>
             <!-- SHADOW HEADER -->
             <div class="shadow">
-               <button>EFFETTUA L'UPGRADE</button>
+                <button>EFFETTUA L'UPGRADE</button>
             </div>
             <!-- HEADER MENU -->
             <div class="header-menu">
                 <ul class="header-menu-list">
-                    <li class="header-menu-li">IN EVIDENZA</li>
+                    <div id="header-menu-li-1">
+                        <li class="header-menu-li">IN EVIDENZA</li>
+                    </div>
                     <li class="header-menu-li">PODCAST</li>
                     <li class="header-menu-li">CLASSIFICHE</li>
                     <li class="header-menu-li">GENERI E MOOD</li>
@@ -107,7 +109,7 @@
 
                         <div class="first-row-col">
                             <img class="first-row-img" src="img/metal_lifting.jpg" alt="">
-                            <div class="hover-play"> 
+                            <div class="hover-play">
                                 <i class="fa-regular fa-circle-play"></i>
                             </div>
                             <h3 class="first-row-title"> Heavy Metal </h3>
@@ -115,7 +117,7 @@
                         </div>
                         <div class="first-row-col">
                             <img class="first-row-img" src="img/stranger.jpeg" alt="">
-                            <div class="hover-play"> 
+                            <div class="hover-play">
                                 <i class="fa-regular fa-circle-play"></i>
                             </div>
                             <h3 class="first-row-title">Stranger things, Vol.1(a Netflix Original Series Soundtrack)
@@ -124,7 +126,7 @@
                         </div>
                         <div class="first-row-col">
                             <img class="first-row-img" src="img/aquietplace.jpeg" alt="">
-                            <div class="hover-play"> 
+                            <div class="hover-play">
                                 <i class="fa-regular fa-circle-play"></i>
                             </div>
                             <h3 class="first-row-title">A quite place</h3>
@@ -132,7 +134,7 @@
                         </div>
                         <div class="first-row-col">
                             <img class="first-row-img" src="img/split.jpeg" alt="">
-                            <div class="hover-play"> 
+                            <div class="hover-play">
                                 <i class="fa-regular fa-circle-play"></i>
                             </div>
                             <h3 class="first-row-title">Split</h3>
@@ -143,7 +145,7 @@
                     <div class="second-of-first-row">
                         <div class="second-of-first-row-col">
                             <img class="first-row-img" src="img/cure.jpeg" alt="">
-                            <div class="hover-play"> 
+                            <div class="hover-play">
                                 <i class="fa-regular fa-circle-play"></i>
                             </div>
                             <h3 class="first-row-title">A cure for Wellness</h3>
@@ -151,7 +153,7 @@
                         </div>
                         <div class="second-of-first-row-col">
                             <img class="first-row-img" src="img/sinister.jpeg" alt="">
-                            <div class="hover-play"> 
+                            <div class="hover-play">
                                 <i class="fa-regular fa-circle-play"></i>
                             </div>
                             <h3 class="first-row-title">Sinister</h3>
@@ -166,7 +168,7 @@
 
                     <div class="second-row-col">
                         <img class="first-row-img" src="img/radar.jpeg" alt="">
-                        <div class="hover-play"> 
+                        <div class="hover-play">
                             <i class="fa-regular fa-circle-play"></i>
                         </div>
                         <h3 class="first-row-title">Release Radar</h3>
@@ -174,7 +176,7 @@
                     </div>
                     <div class="second-row-col">
                         <img class="first-row-img" src="img/mixdaily.jpeg" alt="">
-                        <div class="hover-play"> 
+                        <div class="hover-play">
                             <i class="fa-regular fa-circle-play"></i>
                         </div>
                         <h3 class="first-row-title">Daily Mix 1</h3>
@@ -189,13 +191,13 @@
 
                     <div class="third-col">
                         <img class="img-row-3" src="img/youg.jpeg" alt="">
-                        <div class="hover-play"> 
+                        <div class="hover-play">
                             <i class="fa-regular fa-circle-play"></i>
                         </div>
                     </div>
                     <div class="third-col">
                         <img class="img-row-3" src="img/einaudi.jpeg" alt="">
-                        <div class="hover-play"> 
+                        <div class="hover-play">
                             <i class="fa-regular fa-circle-play"></i>
                         </div>
                     </div>
@@ -203,51 +205,51 @@
             </div>
         </main>
     </div>
-    <!-- footer -->
-    <footer>
-        <div class="footer-container">
-            <!--  first row -->
-            <div class="row-first">
-                <div class="music-in-play">
-                    <img class="footer-img" src="img/player_left.jpg" alt="">
-                    <div class="music-play-name">
-                        <h4>Sinister</h4>
-                        <p>Brano nome</p>
+        <!-- footer -->
+        <footer>
+            <div class="footer-container">
+                <!--  first row -->
+                <div class="row-first">
+                    <div class="music-in-play">
+                        <img class="footer-img" src="img/player_left.jpg" alt="">
+                        <div class="music-play-name">
+                            <h4>Sinister</h4>
+                            <p>Brano nome</p>
+                        </div>
+                    </div>
+
+                    <div class="fonts-row">
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-regular fa-folder"></i>
                     </div>
                 </div>
+                <!-- center row -->
+                <div class="row-center">
+                    <div class="center-col">
+                        <div class="col-up">
+                            <i class="fa-solid fa-code-compare"></i>
+                            <i class="fa-solid fa-backward-step"></i>
+                            <i class="fa-regular fa-circle-play"></i>
+                            <i class="fa-solid fa-forward-step"></i>
+                            <i class="fa-solid fa-arrow-rotate-right"></i>
+                        </div>
+                        <div class="col-down">
 
-                <div class="fonts-row">
-                    <i class="fa-regular fa-heart"></i>
-                    <i class="fa-regular fa-folder"></i>
-                </div>
-            </div>
-            <!-- center row -->
-            <div class="row-center">
-                <div class="center-col">
-                    <div class="col-up">
-                        <i class="fa-solid fa-code-compare"></i>
-                        <i class="fa-solid fa-backward-step"></i>
-                        <i class="fa-regular fa-circle-play"></i>
-                        <i class="fa-solid fa-forward-step"></i>
-                        <i class="fa-solid fa-arrow-rotate-right"></i>
-                    </div>
-                    <div class="col-down">
-
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- row-right -->
-            <div class="row-right">
-                <i class="fa-solid fa-list"></i>
-                <i class="fa-solid fa-display"></i>
-                <i class="fa-solid fa-volume-high"></i>
+                <!-- row-right -->
+                <div class="row-right">
+                    <i class="fa-solid fa-list"></i>
+                    <i class="fa-solid fa-display"></i>
+                    <i class="fa-solid fa-volume-high"></i>
 
-                <div class="col-right">
+                    <div class="col-right">
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer>
-
+        </footer>
+    
 
 </body>
 
